--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -33,12 +33,16 @@
     </p>
     <p>
       <h3>Factor Pack:</h3>
+      <% if @project.factor_pack.present? %>
       <%= @project.factor_pack.name %></br>
-    <ul>
-      <% @project.factor_pack.factors.each do |factor| %>
-        <li><%= factor.name %></li>
+        <ul>
+          <% @project.factor_pack.factors.each do |factor| %>
+            <li><%= factor.name %></li>
+          <% end %>
+        </ul>
+      <% else %>
+        [Not set]
       <% end %>
-    </ul>
   </p>
   <%= link_to 'Edit Project Details', edit_project_path(@project) %>
 </div>
@@ -46,7 +50,7 @@
   <h2>Groups</h2>
   <p>
     <%= form_tag add_group_path, method: :get do %>
-      <%= label_tag :group_name, "New group name: " %>
+      <%= label_tag :group_name, "New group name:" %>
       <%= text_field_tag :group_name %>
       <%= hidden_field_tag :project_id, @project.id %>
       <%= submit_tag "Add!" %>
