--- a/app/assets/stylesheets/colab.css
+++ b/app/assets/stylesheets/colab.css
@@ -24,7 +24,7 @@ button,
 .ui-btn {
 	font-size: 1em;
 	line-height: 1.3;
-	     font-family: verdana, arial, helvetica, sans-serif; /*{global-font-family}*/;
+	 font-family: verdana, arial, helvetica, sans-serif; /*{global-font-family}*/;
 }
 legend,
 .ui-input-text input,
@@ -212,7 +212,7 @@ html .ui-alt-icon .ui-radio-off:after {
 }
 /* Loader */
 .ui-icon-loading {
-	/* background: image-url("ajax-loader.gif"); */
+	background: url("images/ajax-loader.gif");
 	background-size: 2.875em 2.875em;
 }
 /* Swatches */
@@ -1034,6 +1034,498 @@ html head + body .ui-body-e.ui-focus {
 }
 
 
+/* F
+-----------------------------------------------------------------------------------------------------------*/
+/* Bar: Toolbars, dividers, slider track */
+.ui-bar-f,
+.ui-page-theme-f .ui-bar-inherit,
+html .ui-bar-f .ui-bar-inherit,
+html .ui-body-f .ui-bar-inherit,
+html body .ui-group-theme-f .ui-bar-inherit {
+	background-color: #ed1c24 /*{f-bar-background-color}*/;
+	border-color: #820f13 /*{f-bar-border}*/;
+	color: #ffffff /*{f-bar-color}*/;
+	text-shadow: 0 /*{f-bar-shadow-x}*/ 1px /*{f-bar-shadow-y}*/ 0 /*{f-bar-shadow-radius}*/ #444444 /*{f-bar-shadow-color}*/;
+	font-weight: bold;
+}
+.ui-bar-f {
+	border-width: 1px;
+	border-style: solid;
+}
+/* Page and overlay */
+.ui-overlay-f,
+.ui-page-theme-f,
+.ui-page-theme-f .ui-panel-wrapper {
+	background-color: #c1272d /*{f-page-background-color}*/;
+	border-color: #c1272d /*{f-page-border}*/;
+	color: #ffffff /*{f-page-color}*/;
+	text-shadow: 0 /*{f-page-shadow-x}*/ 1px /*{f-page-shadow-y}*/ 0 /*{f-page-shadow-radius}*/ #444444 /*{f-page-shadow-color}*/;
+}
+/* Body: Read-only lists, text inputs, collapsible content */
+.ui-body-f,
+.ui-page-theme-f .ui-body-inherit,
+html .ui-bar-f .ui-body-inherit,
+html .ui-body-f .ui-body-inherit,
+html body .ui-group-theme-f .ui-body-inherit,
+html .ui-panel-page-container-f {
+	background-color: #ffcc33 /*{f-body-background-color}*/;
+	border-color: #8c701c /*{f-body-border}*/;
+	color: #000000 /*{f-body-color}*/;
+	text-shadow: 0 /*{f-body-shadow-x}*/ 1px /*{f-body-shadow-y}*/ 0 /*{f-body-shadow-radius}*/ #eeeeee /*{f-body-shadow-color}*/;
+}
+.ui-body-f {
+	border-width: 1px;
+	border-style: solid;
+}
+/* Links */
+.ui-page-theme-f a,
+html .ui-bar-f a,
+html .ui-body-f a,
+html body .ui-group-theme-f a {
+	color: #3388cc /*{f-link-color}*/;
+	font-weight: bold;
+}
+.ui-page-theme-f a:visited,
+html .ui-bar-f a:visited,
+html .ui-body-f a:visited,
+html body .ui-group-theme-f a:visited {
+    color: #3388cc /*{f-link-visited}*/;
+}
+.ui-page-theme-f a:hover,
+html .ui-bar-f a:hover,
+html .ui-body-f a:hover,
+html body .ui-group-theme-f a:hover {
+	color: #005599 /*{f-link-hover}*/;
+}
+.ui-page-theme-f a:active,
+html .ui-bar-f a:active,
+html .ui-body-f a:active,
+html body .ui-group-theme-f a:active {
+	color: #005599 /*{f-link-active}*/;
+}
+/* Button up */
+.ui-page-theme-f .ui-btn,
+html .ui-bar-f .ui-btn,
+html .ui-body-f .ui-btn,
+html body .ui-group-theme-f .ui-btn,
+html head + body .ui-btn.ui-btn-f,
+/* Button visited */
+.ui-page-theme-f .ui-btn:visited,
+html .ui-bar-f .ui-btn:visited,
+html .ui-body-f .ui-btn:visited,
+html body .ui-group-theme-f .ui-btn:visited,
+html head + body .ui-btn.ui-btn-f:visited {
+	background-color: #fcee21 /*{f-bup-background-color}*/;
+	border-color: #8a8212 /*{f-bup-border}*/;
+	color: #000000 /*{f-bup-color}*/;
+	text-shadow: 0 /*{f-bup-shadow-x}*/ 1px /*{f-bup-shadow-y}*/ 0 /*{f-bup-shadow-radius}*/ #eeeeee /*{f-bup-shadow-color}*/;
+}
+/* Button hover */
+.ui-page-theme-f .ui-btn:hover,
+html .ui-bar-f .ui-btn:hover,
+html .ui-body-f .ui-btn:hover,
+html body .ui-group-theme-f .ui-btn:hover,
+html head + body .ui-btn.ui-btn-f:hover {
+	background-color: #FFFF25 /*{f-bhover-background-color}*/;
+	border-color: #8c8c14 /*{f-bhover-border}*/;
+	color: #000000 /*{f-bhover-color}*/;
+	text-shadow: 0 /*{f-bhover-shadow-x}*/ 1px /*{f-bhover-shadow-y}*/ 0 /*{f-bhover-shadow-radius}*/ #eeeeee /*{f-bhover-shadow-color}*/;
+}
+/* Button down */
+.ui-page-theme-f .ui-btn:active,
+html .ui-bar-f .ui-btn:active,
+html .ui-body-f .ui-btn:active,
+html body .ui-group-theme-f .ui-btn:active,
+html head + body .ui-btn.ui-btn-f:active {
+	background-color: #FFFF25 /*{f-bdown-background-color}*/;
+	border-color: #8c8c14 /*{f-bdown-border}*/;
+	color: #000000 /*{f-bdown-color}*/;
+	text-shadow: 0 /*{f-bdown-shadow-x}*/ 1px /*{f-bdown-shadow-y}*/ 0 /*{f-bdown-shadow-radius}*/ #eeeeee /*{f-bdown-shadow-color}*/;
+}
+/* Active button */
+.ui-page-theme-f .ui-btn.ui-btn-active,
+html .ui-bar-f .ui-btn.ui-btn-active,
+html .ui-body-f .ui-btn.ui-btn-active,
+html body .ui-group-theme-f .ui-btn.ui-btn-active,
+html head + body .ui-btn.ui-btn-f.ui-btn-active,
+/* Active checkbox icon */
+.ui-page-theme-f .ui-checkbox-on:after,
+html .ui-bar-f .ui-checkbox-on:after,
+html .ui-body-f .ui-checkbox-on:after,
+html body .ui-group-theme-f .ui-checkbox-on:after,
+.ui-btn.ui-checkbox-on.ui-btn-f:after,
+/* Active flipswitch background */
+.ui-page-theme-f .ui-flipswitch-active,
+html .ui-bar-f .ui-flipswitch-active,
+html .ui-body-f .ui-flipswitch-active,
+html body .ui-group-theme-f .ui-flipswitch-active,
+html body .ui-flipswitch.ui-bar-f.ui-flipswitch-active,
+/* Active slider track */
+.ui-page-theme-f .ui-slider-track .ui-btn-active,
+html .ui-bar-f .ui-slider-track .ui-btn-active,
+html .ui-body-f .ui-slider-track .ui-btn-active,
+html body .ui-group-theme-f .ui-slider-track .ui-btn-active,
+html body div.ui-slider-track.ui-body-f .ui-btn-active {
+	background-color: #8cc63f /*{f-active-background-color}*/;
+	border-color: #4d6c22 /*{f-active-border}*/;
+	color: #ffffff /*{f-active-color}*/;
+	text-shadow: 0 /*{f-active-shadow-x}*/ 1px /*{f-active-shadow-y}*/ 0 /*{f-active-shadow-radius}*/ #444444 /*{f-active-shadow-color}*/;
+}
+/* Active radio button icon */
+.ui-page-theme-f .ui-radio-on:after,
+html .ui-bar-f .ui-radio-on:after,
+html .ui-body-f .ui-radio-on:after,
+html body .ui-group-theme-f .ui-radio-on:after,
+.ui-btn.ui-radio-on.ui-btn-f:after {
+	border-color: #8cc63f /*{f-active-background-color}*/;
+}
+/* Focus */
+.ui-page-theme-f .ui-btn:focus,
+html .ui-bar-f .ui-btn:focus,
+html .ui-body-f .ui-btn:focus,
+html body .ui-group-theme-f .ui-btn:focus,
+html head + body .ui-btn.ui-btn-f:focus,
+/* Focus buttons and text inputs with div wrap */
+.ui-page-theme-f .ui-focus,
+html .ui-bar-f .ui-focus,
+html .ui-body-f .ui-focus,
+html body .ui-group-theme-f .ui-focus,
+html head + body .ui-btn-f.ui-focus,
+html head + body .ui-body-f.ui-focus {
+	-webkit-box-shadow: 0 0 12px #8cc63f /*{f-active-background-color}*/;
+	-moz-box-shadow: 0 0 12px #8cc63f /*{f-active-background-color}*/;
+	box-shadow: 0 0 12px #8cc63f /*{f-active-background-color}*/;
+}
+
+
+/* G
+-----------------------------------------------------------------------------------------------------------*/
+/* Bar: Toolbars, dividers, slider track */
+.ui-bar-g,
+.ui-page-theme-g .ui-bar-inherit,
+html .ui-bar-g .ui-bar-inherit,
+html .ui-body-g .ui-bar-inherit,
+html body .ui-group-theme-g .ui-bar-inherit {
+	background-color: #93278f /*{g-bar-background-color}*/;
+	border-color: #50154e /*{g-bar-border}*/;
+	color: #ffffff /*{g-bar-color}*/;
+	text-shadow: 0 /*{g-bar-shadow-x}*/ 1px /*{g-bar-shadow-y}*/ 0 /*{g-bar-shadow-radius}*/ #444444 /*{g-bar-shadow-color}*/;
+	font-weight: bold;
+}
+.ui-bar-g {
+	border-width: 1px;
+	border-style: solid;
+}
+/* Page and overlay */
+.ui-overlay-g,
+.ui-page-theme-g,
+.ui-page-theme-g .ui-panel-wrapper {
+	background-color: #0071bc /*{g-page-background-color}*/;
+	border-color: #0071bc /*{g-page-border}*/;
+	color: #ffffff /*{g-page-color}*/;
+	text-shadow: 0 /*{g-page-shadow-x}*/ 1px /*{g-page-shadow-y}*/ 0 /*{g-page-shadow-radius}*/ #444444 /*{g-page-shadow-color}*/;
+}
+/* Body: Read-only lists, text inputs, collapsible content */
+.ui-body-g,
+.ui-page-theme-g .ui-body-inherit,
+html .ui-bar-g .ui-body-inherit,
+html .ui-body-g .ui-body-inherit,
+html body .ui-group-theme-g .ui-body-inherit,
+html .ui-panel-page-container-g {
+	background-color: #33ccff /*{g-body-background-color}*/;
+	border-color: #1c708c /*{g-body-border}*/;
+	color: #000000 /*{g-body-color}*/;
+	text-shadow: 0 /*{g-body-shadow-x}*/ 1px /*{g-body-shadow-y}*/ 0 /*{g-body-shadow-radius}*/ #eeeeee /*{g-body-shadow-color}*/;
+}
+.ui-body-g {
+	border-width: 1px;
+	border-style: solid;
+}
+/* Links */
+.ui-page-theme-g a,
+html .ui-bar-g a,
+html .ui-body-g a,
+html body .ui-group-theme-g a {
+	color: #3388cc /*{g-link-color}*/;
+	font-weight: bold;
+}
+.ui-page-theme-g a:visited,
+html .ui-bar-g a:visited,
+html .ui-body-g a:visited,
+html body .ui-group-theme-g a:visited {
+    color: #3388cc /*{g-link-visited}*/;
+}
+.ui-page-theme-g a:hover,
+html .ui-bar-g a:hover,
+html .ui-body-g a:hover,
+html body .ui-group-theme-g a:hover {
+	color: #005599 /*{g-link-hover}*/;
+}
+.ui-page-theme-g a:active,
+html .ui-bar-g a:active,
+html .ui-body-g a:active,
+html body .ui-group-theme-g a:active {
+	color: #005599 /*{g-link-active}*/;
+}
+/* Button up */
+.ui-page-theme-g .ui-btn,
+html .ui-bar-g .ui-btn,
+html .ui-body-g .ui-btn,
+html body .ui-group-theme-g .ui-btn,
+html head + body .ui-btn.ui-btn-g,
+/* Button visited */
+.ui-page-theme-g .ui-btn:visited,
+html .ui-bar-g .ui-btn:visited,
+html .ui-body-g .ui-btn:visited,
+html body .ui-group-theme-g .ui-btn:visited,
+html head + body .ui-btn.ui-btn-g:visited {
+	background-color: #662d91 /*{g-bup-background-color}*/;
+	border-color: #38184f /*{g-bup-border}*/;
+	color: #ffffff /*{g-bup-color}*/;
+	text-shadow: 0 /*{g-bup-shadow-x}*/ 1px /*{g-bup-shadow-y}*/ 0 /*{g-bup-shadow-radius}*/ #444444 /*{g-bup-shadow-color}*/;
+}
+/* Button hover */
+.ui-page-theme-g .ui-btn:hover,
+html .ui-bar-g .ui-btn:hover,
+html .ui-body-g .ui-btn:hover,
+html body .ui-group-theme-g .ui-btn:hover,
+html head + body .ui-btn.ui-btn-g:hover {
+	background-color: #7533a6 /*{g-bhover-background-color}*/;
+	border-color: #401c5b /*{g-bhover-border}*/;
+	color: #ffffff /*{g-bhover-color}*/;
+	text-shadow: 0 /*{g-bhover-shadow-x}*/ 1px /*{g-bhover-shadow-y}*/ 0 /*{g-bhover-shadow-radius}*/ #444444 /*{g-bhover-shadow-color}*/;
+}
+/* Button down */
+.ui-page-theme-g .ui-btn:active,
+html .ui-bar-g .ui-btn:active,
+html .ui-body-g .ui-btn:active,
+html body .ui-group-theme-g .ui-btn:active,
+html head + body .ui-btn.ui-btn-g:active {
+	background-color: #7533a6 /*{g-bdown-background-color}*/;
+	border-color: #401c5b /*{g-bdown-border}*/;
+	color: #ffffff /*{g-bdown-color}*/;
+	text-shadow: 0 /*{g-bdown-shadow-x}*/ 1px /*{g-bdown-shadow-y}*/ 0 /*{g-bdown-shadow-radius}*/ #444444 /*{g-bdown-shadow-color}*/;
+}
+/* Active button */
+.ui-page-theme-g .ui-btn.ui-btn-active,
+html .ui-bar-g .ui-btn.ui-btn-active,
+html .ui-body-g .ui-btn.ui-btn-active,
+html body .ui-group-theme-g .ui-btn.ui-btn-active,
+html head + body .ui-btn.ui-btn-g.ui-btn-active,
+/* Active checkbox icon */
+.ui-page-theme-g .ui-checkbox-on:after,
+html .ui-bar-g .ui-checkbox-on:after,
+html .ui-body-g .ui-checkbox-on:after,
+html body .ui-group-theme-g .ui-checkbox-on:after,
+.ui-btn.ui-checkbox-on.ui-btn-g:after,
+/* Active flipswitch background */
+.ui-page-theme-g .ui-flipswitch-active,
+html .ui-bar-g .ui-flipswitch-active,
+html .ui-body-g .ui-flipswitch-active,
+html body .ui-group-theme-g .ui-flipswitch-active,
+html body .ui-flipswitch.ui-bar-g.ui-flipswitch-active,
+/* Active slider track */
+.ui-page-theme-g .ui-slider-track .ui-btn-active,
+html .ui-bar-g .ui-slider-track .ui-btn-active,
+html .ui-body-g .ui-slider-track .ui-btn-active,
+html body .ui-group-theme-g .ui-slider-track .ui-btn-active,
+html body div.ui-slider-track.ui-body-g .ui-btn-active {
+	background-color: #3388cc /*{g-active-background-color}*/;
+	border-color: #1c4a70 /*{g-active-border}*/;
+	color: #ffffff /*{g-active-color}*/;
+	text-shadow: 0 /*{g-active-shadow-x}*/ 1px /*{g-active-shadow-y}*/ 0 /*{g-active-shadow-radius}*/ #005599 /*{g-active-shadow-color}*/;
+}
+/* Active radio button icon */
+.ui-page-theme-g .ui-radio-on:after,
+html .ui-bar-g .ui-radio-on:after,
+html .ui-body-g .ui-radio-on:after,
+html body .ui-group-theme-g .ui-radio-on:after,
+.ui-btn.ui-radio-on.ui-btn-g:after {
+	border-color: #3388cc /*{g-active-background-color}*/;
+}
+/* Focus */
+.ui-page-theme-g .ui-btn:focus,
+html .ui-bar-g .ui-btn:focus,
+html .ui-body-g .ui-btn:focus,
+html body .ui-group-theme-g .ui-btn:focus,
+html head + body .ui-btn.ui-btn-g:focus,
+/* Focus buttons and text inputs with div wrap */
+.ui-page-theme-g .ui-focus,
+html .ui-bar-g .ui-focus,
+html .ui-body-g .ui-focus,
+html body .ui-group-theme-g .ui-focus,
+html head + body .ui-btn-g.ui-focus,
+html head + body .ui-body-g.ui-focus {
+	-webkit-box-shadow: 0 0 12px #3388cc /*{g-active-background-color}*/;
+	-moz-box-shadow: 0 0 12px #3388cc /*{g-active-background-color}*/;
+	box-shadow: 0 0 12px #3388cc /*{g-active-background-color}*/;
+}
+
+
+/* H
+-----------------------------------------------------------------------------------------------------------*/
+/* Bar: Toolbars, dividers, slider track */
+.ui-bar-h,
+.ui-page-theme-h .ui-bar-inherit,
+html .ui-bar-h .ui-bar-inherit,
+html .ui-body-h .ui-bar-inherit,
+html body .ui-group-theme-h .ui-bar-inherit {
+	background-color: #ffcc33 /*{h-bar-background-color}*/;
+	border-color: #8c701c /*{h-bar-border}*/;
+	color: #000000 /*{h-bar-color}*/;
+	text-shadow: 0 /*{h-bar-shadow-x}*/ 1px /*{h-bar-shadow-y}*/ 0 /*{h-bar-shadow-radius}*/ #eeeeee /*{h-bar-shadow-color}*/;
+	font-weight: bold;
+}
+.ui-bar-h {
+	border-width: 1px;
+	border-style: solid;
+}
+/* Page and overlay */
+.ui-overlay-h,
+.ui-page-theme-h,
+.ui-page-theme-h .ui-panel-wrapper {
+	background-color: #c69c6d /*{h-page-background-color}*/;
+	border-color: #c69c6d /*{h-page-border}*/;
+	color: #000000 /*{h-page-color}*/;
+	text-shadow: 0 /*{h-page-shadow-x}*/ 1px /*{h-page-shadow-y}*/ 0 /*{h-page-shadow-radius}*/ #eeeeee /*{h-page-shadow-color}*/;
+}
+/* Body: Read-only lists, text inputs, collapsible content */
+.ui-body-h,
+.ui-page-theme-h .ui-body-inherit,
+html .ui-bar-h .ui-body-inherit,
+html .ui-body-h .ui-body-inherit,
+html body .ui-group-theme-h .ui-body-inherit,
+html .ui-panel-page-container-h {
+	background-color: #603813 /*{h-body-background-color}*/;
+	border-color: #864e1a /*{h-body-border}*/;
+	color: #ffffff /*{h-body-color}*/;
+	text-shadow: 0 /*{h-body-shadow-x}*/ 1px /*{h-body-shadow-y}*/ 0 /*{h-body-shadow-radius}*/ #444444 /*{h-body-shadow-color}*/;
+}
+.ui-body-h {
+	border-width: 1px;
+	border-style: solid;
+}
+/* Links */
+.ui-page-theme-h a,
+html .ui-bar-h a,
+html .ui-body-h a,
+html body .ui-group-theme-h a {
+	color: #3388cc /*{h-link-color}*/;
+	font-weight: bold;
+}
+.ui-page-theme-h a:visited,
+html .ui-bar-h a:visited,
+html .ui-body-h a:visited,
+html body .ui-group-theme-h a:visited {
+    color: #3388cc /*{h-link-visited}*/;
+}
+.ui-page-theme-h a:hover,
+html .ui-bar-h a:hover,
+html .ui-body-h a:hover,
+html body .ui-group-theme-h a:hover {
+	color: #005599 /*{h-link-hover}*/;
+}
+.ui-page-theme-h a:active,
+html .ui-bar-h a:active,
+html .ui-body-h a:active,
+html body .ui-group-theme-h a:active {
+	color: #005599 /*{h-link-active}*/;
+}
+/* Button up */
+.ui-page-theme-h .ui-btn,
+html .ui-bar-h .ui-btn,
+html .ui-body-h .ui-btn,
+html body .ui-group-theme-h .ui-btn,
+html head + body .ui-btn.ui-btn-h,
+/* Button visited */
+.ui-page-theme-h .ui-btn:visited,
+html .ui-bar-h .ui-btn:visited,
+html .ui-body-h .ui-btn:visited,
+html body .ui-group-theme-h .ui-btn:visited,
+html head + body .ui-btn.ui-btn-h:visited {
+	background-color: #c7b299 /*{h-bup-background-color}*/;
+	border-color: #6d6154 /*{h-bup-border}*/;
+	color: #000000 /*{h-bup-color}*/;
+	text-shadow: 0 /*{h-bup-shadow-x}*/ 1px /*{h-bup-shadow-y}*/ 0 /*{h-bup-shadow-radius}*/ #eeeeee /*{h-bup-shadow-color}*/;
+}
+/* Button hover */
+.ui-page-theme-h .ui-btn:hover,
+html .ui-bar-h .ui-btn:hover,
+html .ui-body-h .ui-btn:hover,
+html body .ui-group-theme-h .ui-btn:hover,
+html head + body .ui-btn.ui-btn-h:hover {
+	background-color: #e4ccaf /*{h-bhover-background-color}*/;
+	border-color: #7d7060 /*{h-bhover-border}*/;
+	color: #000000 /*{h-bhover-color}*/;
+	text-shadow: 0 /*{h-bhover-shadow-x}*/ 1px /*{h-bhover-shadow-y}*/ 0 /*{h-bhover-shadow-radius}*/ #eeeeee /*{h-bhover-shadow-color}*/;
+}
+/* Button down */
+.ui-page-theme-h .ui-btn:active,
+html .ui-bar-h .ui-btn:active,
+html .ui-body-h .ui-btn:active,
+html body .ui-group-theme-h .ui-btn:active,
+html head + body .ui-btn.ui-btn-h:active {
+	background-color: #e4ccaf /*{h-bdown-background-color}*/;
+	border-color: #7d7060 /*{h-bdown-border}*/;
+	color: #000000 /*{h-bdown-color}*/;
+	text-shadow: 0 /*{h-bdown-shadow-x}*/ 1px /*{h-bdown-shadow-y}*/ 0 /*{h-bdown-shadow-radius}*/ #eeeeee /*{h-bdown-shadow-color}*/;
+}
+/* Active button */
+.ui-page-theme-h .ui-btn.ui-btn-active,
+html .ui-bar-h .ui-btn.ui-btn-active,
+html .ui-body-h .ui-btn.ui-btn-active,
+html body .ui-group-theme-h .ui-btn.ui-btn-active,
+html head + body .ui-btn.ui-btn-h.ui-btn-active,
+/* Active checkbox icon */
+.ui-page-theme-h .ui-checkbox-on:after,
+html .ui-bar-h .ui-checkbox-on:after,
+html .ui-body-h .ui-checkbox-on:after,
+html body .ui-group-theme-h .ui-checkbox-on:after,
+.ui-btn.ui-checkbox-on.ui-btn-h:after,
+/* Active flipswitch background */
+.ui-page-theme-h .ui-flipswitch-active,
+html .ui-bar-h .ui-flipswitch-active,
+html .ui-body-h .ui-flipswitch-active,
+html body .ui-group-theme-h .ui-flipswitch-active,
+html body .ui-flipswitch.ui-bar-h.ui-flipswitch-active,
+/* Active slider track */
+.ui-page-theme-h .ui-slider-track .ui-btn-active,
+html .ui-bar-h .ui-slider-track .ui-btn-active,
+html .ui-body-h .ui-slider-track .ui-btn-active,
+html body .ui-group-theme-h .ui-slider-track .ui-btn-active,
+html body div.ui-slider-track.ui-body-h .ui-btn-active {
+	background-color: #f7931e /*{h-active-background-color}*/;
+	border-color: #875010 /*{h-active-border}*/;
+	color: #ffffff /*{h-active-color}*/;
+	text-shadow: 0 /*{h-active-shadow-x}*/ 1px /*{h-active-shadow-y}*/ 0 /*{h-active-shadow-radius}*/ #444444 /*{h-active-shadow-color}*/;
+}
+/* Active radio button icon */
+.ui-page-theme-h .ui-radio-on:after,
+html .ui-bar-h .ui-radio-on:after,
+html .ui-body-h .ui-radio-on:after,
+html body .ui-group-theme-h .ui-radio-on:after,
+.ui-btn.ui-radio-on.ui-btn-h:after {
+	border-color: #f7931e /*{h-active-background-color}*/;
+}
+/* Focus */
+.ui-page-theme-h .ui-btn:focus,
+html .ui-bar-h .ui-btn:focus,
+html .ui-body-h .ui-btn:focus,
+html body .ui-group-theme-h .ui-btn:focus,
+html head + body .ui-btn.ui-btn-h:focus,
+/* Focus buttons and text inputs with div wrap */
+.ui-page-theme-h .ui-focus,
+html .ui-bar-h .ui-focus,
+html .ui-body-h .ui-focus,
+html body .ui-group-theme-h .ui-focus,
+html head + body .ui-btn-h.ui-focus,
+html head + body .ui-body-h.ui-focus {
+	-webkit-box-shadow: 0 0 12px #f7931e /*{h-active-background-color}*/;
+	-moz-box-shadow: 0 0 12px #f7931e /*{h-active-background-color}*/;
+	box-shadow: 0 0 12px #f7931e /*{h-active-background-color}*/;
+}
+
+
 /* Structure */
 /* Disabled
 -----------------------------------------------------------------------------------------------------------*/
@@ -1072,4 +1564,3 @@ button[disabled],
 	outline-width: 1px;
 	outline-style: auto;
 }
-			
