The JavaScript is improving and getting back to functioning levels.

--- a/app/views/layouts/graphing.html.erb
+++ b/app/views/layouts/graphing.html.erb
@@ -21,7 +21,7 @@
         <% end -%>
         <%= yield %>
       </div>
-      <%= render "layouts/shared/footer", working: true %>
+    <%= render 'layouts/shared/footer', working: false %>
     </div>
   </body>
 </html>
