Added an application icon. Yup! it's my carrot!

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <%= favicon_link_tag %>
   <head>
     <title>CoLab <%= " : " + @title unless @title.nil? %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
