--- a/app/views/layouts/projects.html.erb
+++ b/app/views/layouts/projects.html.erb
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <%= favicon_link_tag %>
   <head>
     <title>CoLab : Edit Projects</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
