--- a/app/views/bingo_games/edit.html.erb
+++ b/app/views/bingo_games/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Editing Experience</h1>
+<h1>Editing Bingo Game</h1>
 <%= render 'form' %>
-<%= link_to 'Show', @experience %> |
-<%= link_to 'Back to course', @experience.course %>
+<%= link_to 'Show', @bingo_game %> |
+<%= link_to 'Back to course', @bingo_game.course %>
