--- a/app/views/bingo_games/new.html.erb
+++ b/app/views/bingo_games/new.html.erb
@@ -1,3 +1,3 @@
-<h1>New Experience</h1>
+<h1>New Bingo Game</h1>
 <%= render 'form' %>
-<%= link_to 'Back to course', @experience.course %>
+<%= link_to 'Back to course', @bingo_game.course %>
