--- a/app/views/experiences/_form.html.erb
+++ b/app/views/experiences/_form.html.erb
@@ -12,7 +12,7 @@
     <div id="details" class="ui-body-<%= theme_code %> ui-content">
       <h2>Experience Details</h2>
       <div class="form-inputs">
-        <%= f.association :course %>
+        <strong>Course: </strong> <%= @experience.course.name %></br></br>
         <%= f.input :name %>
         <%= f.input :active %>
         <table width="100%">
